pulseaudio (1:8.0-0ubuntu3.1) UNRELEASED; urgency=medium

  * debian/pulseaudio.maintscript: Bump versions for files that need to be
    removed as they are obsolete (LP: #1573296)

 -- Luke Yelavich <luke@galactica>  Wed, 27 Apr 2016 13:39:16 +0200

pulseaudio (1:8.0-0ubuntu3) xenial; urgency=medium

  * Drop 0023-fixing_snd_mixer_poll_descriptors_count_when_zero.patch 
    - Upstreamed
  * 0024-alsa-mixer-Quick-workaround-for-potential-index-out-.patch
    - Fix a potential index-out-of-bounds when reading multichannel mixers
  * 0100-switch-on-port-available-Switch-from-HDMI-to-analog-.patch
    - Improve an 8.0 routing regression 

 -- David Henningsson <david.henningsson@canonical.com>  Mon, 21 Mar 2016 11:14:25 +0100

pulseaudio (1:8.0-0ubuntu2) xenial; urgency=medium

  * 0600-droid-sync-with-upstream-for-Android-5-support-and-b.patch:
    - Fix build failure by changing pa_strlist_tostring calls to
      pa_strlist_to_string

 -- Luke Yelavich <themuso@ubuntu.com>  Thu, 11 Feb 2016 08:44:22 +1100

pulseaudio (1:8.0-0ubuntu1) xenial; urgency=medium

  * New upstream release
  * Merge from Debian experimental, remaining changes:
    - epoch (my stupid fault :S)
    - Don't ship the consolekit module, and explicitly depend on the PAM
      systemd module
    - Add a module to allow pulseaudio to use the Android audio HAL
    - Adjust gbp.conf file to point to the ubuntu branch for package builds
    - Disable module-role-cork by default
    - Load module-x11-bell in the start-pulseaudio-x11 script
    - Hide pulseaudio from startup apps dialog
    - Quit daemon if pid file is removed
    - Avoid abort when poll descriptor is 0, such as when using it with the
      audioflinger bridge, like done in ubuntu touch
    - change default rlimit_rttime value to 200 ms
    - Don't probe UCM profiles, trust that the profile writer knows what they
      are doing
    - Add card hook to allow modules to do something before a profile becomes
      active